[package]
name = "rusty-ip"
version = "0.1.0"
authors = ["Alex J <Fraise@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
clap = "3.0.0-beta.2"
